<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/painting_actions_card"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:translationX="0dp"
        android:layout_gravity="top|end"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_wait"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/background_gradient_start"
                android:text="@string/btn_wait"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_follow"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/main_color"
                android:text="@string/btn_follow"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <android.opengl.GLSurfaceView
        android:id="@+id/surface_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/painting_recognised_card"
        android:visibility="visible"
        android:layout_width="720dp"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="bottom|center"
        android:translationY="140dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="6">

                <TextView
                    android:id="@+id/painting_recognised_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TitleTextStyle"
                    android:text="@string/title_painting_11"
                    android:textColor="@color/main_color"/>

                <TextView
                    android:id="@+id/painting_recognised_location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextStyle"
                    android:text="@string/location_painting_11"
                    android:textColor="@color/background_gradient_end"
                    android:layout_weight="6"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_speak"
                style="@style/ClickableButtonStyle"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_speak" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>