<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".NaoButtons"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_height="55dp"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textAlignment="textStart"
                    android:gravity="start|center_vertical"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="3"
                    android:text="@string/btn_settings"
                    android:textColor="@color/main_color" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_follow_mode"
                    android:layout_width="80dp"
                    android:layout_height="55dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_weight="1"
                    android:backgroundTint="@color/background_gradient_start"
                    android:text="@string/btn_follow"
                    android:textColor="@color/white"
                    app:cornerRadius="20dp"/>

                <ImageButton
                    android:id="@+id/btn_stats"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_stats"
                    android:layout_gravity="center"
                    android:elevation="15dp"
                    android:layout_marginEnd="25dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/btn_stats" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/EditTextStyle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="10dp"
                android:hint="@string/hint_ip"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/main_color"
                app:hintTextColor="@color/main_color"
                android:textColorHint="@color/grey"
                app:boxStrokeWidth="2dp"
                app:endIconMode="clear_text"
                app:errorEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ip_edit_text"
                    android:inputType="text"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal"
                    android:autofillHints="@null"
                    android:background="@null"
                    android:hint="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/EditTextStyle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_port"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/main_color"
                app:hintTextColor="@color/main_color"
                android:textColorHint="@color/grey"
                app:boxStrokeWidth="2dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/port_edit_text"
                    android:inputType="numberDecimal"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal"
                    android:autofillHints="@null"
                    android:background="@null"
                    android:hint="@null"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_ok"
                    android:layout_width="120dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="20sp"
                    android:backgroundTint="@color/main_color"
                    android:text="@string/btn_ok"
                    android:textColor="@color/white"
                    app:cornerRadius="20dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_annulla"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="120dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="20sp"
                    android:text="@string/btn_cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/main_color"
                    app:cornerRadius="20dp"
                    app:strokeColor="@color/main_color"
                    app:strokeWidth="2dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>